--- a/jump_to_modal_test.html
+++ b/jump_to_modal_test.html
@@ -1,7 +1,7 @@
 <html>
     <meta charset="UTF-8">
     <head>
-        <title>テーブル生成テスト</title>
+        <title>Vue.jsを利用したテーブル生成テスト</title>
         <!--vue.jsの利用-->
         <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
     </head>
