タイトルの変更

--- a/text_change/kirikae1.html
+++ b/text_change/kirikae1.html
@@ -2,10 +2,10 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8">
-    <title>文字の切り替え</title>
+    <title>文章の切り替え</title>
   </head>
   <body>
-    <h1>文字の切り替え</h1>
+    <h1>文章の切り替え</h1>
     <p>リストの文字をクリックすると、一番下の文章が変わります。</p>
     <li onclick="a(value)" value="A1">A1</li>
     <li onclick="a(value)" value="A2">A2</li>
