--- a/text_change/kirikae1_jquery.html
+++ b/text_change/kirikae1_jquery.html
@@ -2,11 +2,11 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8">
-    <title>文字の切り替え（jQuery）</title>
+    <title>文章の切り替え（jQuery）</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   </head>
   <body>
-    <h1>文字の切り替え（jQuery）</h1>
+    <h1>文章の切り替え（jQuery）</h1>
     <p>リストの文字をクリックすると、一番下の文章が変わります。</p>
     <ul id="sample">
       <li>A1</li>
